--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -1,7 +1,7 @@
-|          | 创建型模式                  |                     结构型模式                     | 行为型模式                                                   |
-| -------- | --------------------------- | :------------------------------------------------: | ------------------------------------------------------------ |
-| 类模式   | 工厂方法                    |                     (类)适配器                     | 模板方法 解释器                                              |
-| 对象模式 | 单例  原型  抽象工厂 建造者 | (对象)适配器   代理   桥接   装饰 外观  享元  组合 | 策略  命令  职责链  状态  观察者  中介者 迭代器  访问者 备忘录 |
+|          | 创建型模式            |             结构型模式             | 行为型模式                                         |
+| -------- | --------------------- | :--------------------------------: | -------------------------------------------------- |
+| 类模式   | 工厂方法              |                适配                | 模板方法 解释器                                    |
+| 对象模式 | 单例 原型 抽象 建造者 | 适配 代理 桥接 装饰 外观 享元 组合 | 策略 命令 职责链 状态 观察 中介 迭代 访问者 备忘录 |
 
 
 
@@ -11,12 +11,17 @@
 
 ## 简单工厂/静态工厂
 
-**根据传入的参数，动态决定应该创建哪一个产品子类**（这些产品子类继承自同一个父类或接口）的实例，并**以父类形式返回**
+根据传入的参数，动态决定应该创建哪个产品子类的实例，**以父类形式返回**
 
-![image-20200817095352502](image.assets/image-20200817095352502.png)
+![](image.assets/image-20200817095352502.png)
 
-优点：客户端不负责对象的创建，而是由专门的工厂类完成；客户端只负责对象的调用，实现了**创建和调用分离**，降低了客户端代码的难度；
-缺点：工厂类需要知道产品类的具体实现细节 ,并决定何时实例化产品类 .如果**增加和减少产品子类，需要修改简单工厂类**，违背了开闭原则；如果产品子类过多，会导致工厂类非常的庞大，违反了高内聚原则，不利于后期维护
+* 优点
+  * 客户端不负责对象的创建，而是由专门的工厂类完成；
+  * 客户端只负责对象的调用，实现了**创建和调用分离**，降低了客户端代码的难度
+
+* 缺点
+  * 工厂类需要知道产品类的具体实现细节,并决定何时实例化产品类.如果**增加和减少产品子类，需要修改工厂类**，违背了开闭原则
+  * 如果产品子类过多，会导致工厂类非常的庞大，违反了高内聚原则
 
 
 
@@ -44,7 +49,7 @@ public interface Collection<E> extends Iterable<E> {
 
 有iterator()方法生产迭代器对象
 
-在实现类ArrayList中 ,生产出适合ArrayList的具体产品ITr![image-20200817103546040](image.assets/image-20200817103546040.png)
+在实现类ArrayList中,生产出适合ArrayList的具体产品ITr![image-20200817103546040](image.assets/image-20200817103546040.png)
 
 ![image-20200817103610696](image.assets/image-20200817103610696.png)
 
@@ -78,7 +83,7 @@ public interface Collection<E> extends Iterable<E> {
 
 Prototype抽象原型类
 
-ConcretePrototype具体原型类 ,实现具体的克隆方法
+ConcretePrototype具体原型类,实现具体的克隆方法
 
 
 
@@ -86,16 +91,16 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 确保一个类只有一个实例,并且自行实例化并向整个系统提供这个实例
 
-如序列号生成器 ,页面计数器等都可以用单例模式	创建对象需要消耗过多资源时 , 也可以用单例	减少重复创建对象 ,如io ,数据库连接
+如序列号生成器,页面计数器等都可以用单例模式	创建对象需要消耗过多资源时, 也可以用单例	减少重复创建对象,如io,数据库连接
 
-**构造方法private ,全局变量private static ,获取实例方法public static **
+**构造方法private,全局变量private static,获取实例方法public static **
 
 
 
 **单例模式可能不只一个实例**
 
-* 分布式系统中 ,多个jvm各自有一个实例
-* 一个jvm , 使用了多个类加载器同时加载这个类 ,产生多个实例
+* 分布式系统中,多个jvm各自有一个实例
+* 一个jvm, 使用了多个类加载器同时加载这个类,产生多个实例
 
 
 
@@ -113,19 +118,19 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 ![image-20200817085030122](image.assets/image-20200817085030122.png)
 
-通过synchronized加锁 ,防止被多次实例化
+通过synchronized加锁,防止被多次实例化
 
 
 
 ### 懒汉-双重检查锁
 
-懒汉在第一次请求实例后创建了对象 ,就不会走singleton==null的判断了 ,也**不需要方法级别的锁**来保证它只被实例化一次
+懒汉在第一次请求实例后创建了对象,就不会走singleton==null的判断了,也**不需要方法级别的锁**来保证它只被实例化一次
 
 可以**缩小锁的范围** 让getInstance方法不是同步方法	
 
-**双重检查是检查两次singleton==null ,因为没有了方法级别的锁 ,线程a在进行加锁前后 ,可能就已经被b给实例化了**
+**双重检查是检查两次singleton==null,因为没有了方法级别的锁,线程a在进行加锁前后,可能就已经被b给实例化了**
 
-使用双重检查锁时 ,静态全局变量需要加上**volatile**
+使用双重检查锁时,静态全局变量需要加上**volatile**
 
 实例化分为3个步骤
 
@@ -133,13 +138,13 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 * 初始化对象
 * 指向内存地址
 
-虚拟机会进行优化 ,**初始化对象和指向内存地址的顺序可能会调换**
+虚拟机会进行优化,**初始化对象和指向内存地址的顺序可能会调换**
 
 即	分配内存->指向地址	哪怕还没有进行实例化
 
-这将导致**线程a在进行第一个singleton==null时 , true->加锁 ,再次判断singleton==null->分配内存->分配内存地址->实例化**
+这将导致**线程a在进行第一个singleton==null时, true->加锁,再次判断singleton==null->分配内存->分配内存地址->实例化**
 
-在线程a进行分配内存地址时 ,线程b开始进行singleton==null ,**此时singleton已经有内存地址**了 ,不为null ,直接被return
+在线程a进行分配内存地址时,线程b开始进行singleton==null,**此时singleton已经有内存地址**了,不为null,直接被return
 
 ![image-20200817085632182](image.assets/image-20200817085632182.png)
 
@@ -174,15 +179,15 @@ class House{
 
 ## 适配器模式 adapter
 
-当原有接口与客户端不匹配 ,==无需修改原接口 .通过关联方式将对象放入适配器中== ,通过访问适配器的方法来间接操作对象 ,从而可以添加新的方法
+当原有接口与客户端不匹配,==无需修改原接口.通过关联方式将对象放入适配器中==,通过访问适配器的方法来间接操作对象,从而可以添加新的方法
 
-另一种方法	继承 ,通过子类来访问父类原有的功能
+另一种方法	继承,通过子类来访问父类原有的功能
 
 ![image-20200817085632182](image.assets/适配器模式.png)
 
 
 
-新闻联播为失聪人士提供了手语 ,让有障碍的人也能正常观看
+新闻联播为失聪人士提供了手语,让有障碍的人也能正常观看
 
 ```
 public class AdapterPattern {
@@ -217,9 +222,9 @@ class Adapter implements Translator {
 
 ### 适配器与装饰器区别
 
-适配器调节了原接口与被适配对象 ,==并未修改原接口==
+适配器调节了原接口与被适配对象,==并未修改原接口==
 
-装饰器对原有接口作拓展 ,修改了原接口 
+装饰器对原有接口作拓展,修改了原接口 
 
 
 
@@ -249,7 +254,7 @@ class Adapter implements Translator {
 
 动态的给对象增加职责
 
-运用了关联关系 ,把对象嵌入到装饰器中 ,由装饰器内部操作对象
+运用了关联关系,把对象嵌入到装饰器中,由装饰器内部操作对象
 
 
 
@@ -296,7 +301,7 @@ class RobotDecorator implements Robot {
 
 
 
-IO流大量运用装饰器模式 ,直接继承了InputStream的子类有
+IO流大量运用装饰器模式,直接继承了InputStream的子类有
 
 * ByteArrayInputStream
 * FileInputStream
@@ -312,7 +317,7 @@ FilterInputStream与其它子类不同
 ```
 public class FilterInputStream extends InputStream {
 
-	//内部维护一个InputStream ,调用InputStream的方法
+	//内部维护一个InputStream,调用InputStream的方法
     protected volatile InputStream in;
 
     protected FilterInputStream(InputStream in) {
@@ -351,7 +356,7 @@ FilterInputStream的又有其子类，分别是：
         }
         return getBufIfOpen()[pos++] & 0xff;}
 
-BufferedInputStream就是一个装饰器，==为InputStream加上缓冲功能== ,使得FileInputStream带有了缓冲功能
+BufferedInputStream就是一个装饰器，==为InputStream加上缓冲功能==,使得FileInputStream带有了缓冲功能
 
 ```
 new BufferedInputStream(new FileInputStream(new File("")));
@@ -367,8 +372,8 @@ new BufferedInputStream(new FileInputStream(new File("")));
 
 ![image-20200817085632182](image.assets/外观模式.png)
 
-* 优点	内外部的通信通过**统一的通信对象**进行 ,通信对象是高层次的 ,将内部复杂的操作进行封装 ,使得外观上简洁 ,内部复杂
-* 缺点    **不符合开闭原则**	当内部发生改变时 ,外观也需要修改
+* 优点	内外部的通信通过**统一的通信对象**进行,通信对象是高层次的,将内部复杂的操作进行封装,使得外观上简洁,内部复杂
+* 缺点    **不符合开闭原则**	当内部发生改变时,外观也需要修改
 
 
 
@@ -397,28 +402,28 @@ class SubFlow2{ void method2(){}}
 
 ## 享元 Flyweight
 
-运用共享 ,支持大量细粒度对象复用
+运用共享,支持大量细粒度对象复用
 
 ![image-20200907094120213](image.assets/享元模式.jpg)
 
 * 优点
-  * 减少相同或相似对象的创建 ,节约资源
+  * 减少相同或相似对象的创建,节约资源
   * 享元对象的状态独立于外部环境  从而==可以在不同环境下被共享==
 
 * 缺点
-  * 需要分外部状态和内部状态 ,会导致系统复杂
+  * 需要分外部状态和内部状态,会导致系统复杂
 
 
 
-类似网盘 ,同一份资源被不同人保存 ,实际被保存的文件只有一份
+类似网盘,同一份资源被不同人保存,实际被保存的文件只有一份
 
-被保存的资源是对外一致的 ,被多人共享 ,是细粒度对象
+被保存的资源是对外一致的,被多人共享,是细粒度对象
 
-而每个人的保存时间 ,保存目录是不一致的 ,是粗粒度对象
+而每个人的保存时间,保存目录是不一致的,是粗粒度对象
 
 
 
-池技术	线程池 ,连接池 ,都是享元
+池技术	线程池,连接池,都是享元
 
 ```
 public class FlyWeightPattern {
@@ -490,7 +495,7 @@ class BikeFlyWeightFactory {
 
  ==访问控制理念==
 
-代理模式对客户端的访问限制思想同样运用在状态模式 ,策略模式等 ,根据状态或要执行的算法来限制去调用哪个方法 .一个业务往往需要结合多种设计模式来完成
+代理模式对客户端的访问限制思想同样运用在状态模式,策略模式等,根据状态或要执行的算法来限制去调用哪个方法.一个业务往往需要结合多种设计模式来完成
 
 
 
@@ -576,7 +581,7 @@ class RealSubjectProxy implements Subject {
 
 ## 命令	Command：
 
-将==请求封装为对象==，从而可用不同的请求对客户进行参数化,将==请求排队或记录请求日志==,支持**可撤销**的操作 .使**发出请求的责任和执行请求的责任分离**
+将==请求封装为对象==，从而可用不同的请求对客户进行参数化,将==请求排队或记录请求日志==,支持**可撤销**的操作.使**发出请求的责任和执行请求的责任分离**
 
 
 
@@ -622,7 +627,7 @@ class RealSubjectProxy implements Subject {
 
 ## 模板方法	TemplateMethod
 
-定义一个操作中的算法骨架，而**将算法的一些步骤延迟到子类**中，使得子类可以不改变该算法结构的情况下重定义该算法的某些特定步骤。==行为由父类控制 ,实现由子类完成==
+定义一个操作中的算法骨架，而**将算法的一些步骤延迟到子类**中，使得子类可以不改变该算法结构的情况下重定义该算法的某些特定步骤。==行为由父类控制,实现由子类完成==
 
 ![image-20200907094120213](image.assets/模板方法.png)
 
@@ -630,7 +635,7 @@ class RealSubjectProxy implements Subject {
 
 
 
-类似于菜谱 ,规定了菜谱的模板 ,厨师只需按照步骤进行炒菜
+类似于菜谱,规定了菜谱的模板,厨师只需按照步骤进行炒菜
 
 ```
 public class TemplateMethodPattern {
@@ -662,7 +667,7 @@ class CookingFood extends Cooking {
 
 ## 观察者(发布/订阅) Observer
 
-观察者与被观察者存在多对一关系 ,1个被观察者发生状态改变 ,将通知1~n个观察者 ，而Observer收到通知后，将查询Subject的状态
+观察者与被观察者存在多对一关系,1个被观察者发生状态改变,将通知1~n个观察者 ，而Observer收到通知后，将查询Subject的状态
 
 
 
@@ -743,7 +748,7 @@ B中：
 
 
 
-==回调函数只有1个观察者 ,1个被观察者 ,当A把回调函数set进B时 ,将调用B的执行回调函数方法 ,通知B可以开始执行==
+==回调函数只有1个观察者,1个被观察者,当A把回调函数set进B时,将调用B的执行回调函数方法,通知B可以开始执行==
 
 ```
 //回调函数接口
@@ -782,7 +787,7 @@ class B {
 
 ## 中介者	Mediator
 
-定义中介对象**简化原有对象之间的交互**，使原有对象**不需要显式地互相调用** ,使各个对象间的耦合松散，==只需关心和Mediator的关系，使多对多的关系变成了一对多的关系==，可以降低系统的复杂性，提髙可修改扩展性
+定义中介对象**简化原有对象之间的交互**，使原有对象**不需要显式地互相调用**,使各个对象间的耦合松散，==只需关心和Mediator的关系，使多对多的关系变成了一对多的关系==，可以降低系统的复杂性，提髙可修改扩展性
 
 
 
@@ -790,7 +795,7 @@ class B {
 
 ## 状态	State
 
-枚举所有状态 ,将对象的转换规则以及执行的行为进行封装 ,允许一个对象在其**内部状态改变时改变其行为**
+枚举所有状态,将对象的转换规则以及执行的行为进行封装,允许一个对象在其**内部状态改变时改变其行为**
 
 ==状态对象被多个环境对象共享==
 
@@ -839,19 +844,19 @@ class Context {
 
 ## 责任链	Chain of Responsibility
 
-给多个对象处理请求的机会 ,==减少发送者和接收者之间的耦合== ,把接收对象链接起来 ,在链中传递请求 ,直到请求被响应为止
+给多个对象处理请求的机会,==减少发送者和接收者之间的耦合==,把接收对象链接起来,在链中传递请求,直到请求被响应为止
 
 ![image-20200907094120213](image.assets/责任链模式.png)
 
 
 
 * 优点
-  * 请求者不需要知道谁来处理 ,**处理者不知道请求的全貌**
-  * 灵活性高 ,易于新增处理器
+  * 请求者不需要知道谁来处理,**处理者不知道请求的全貌**
+  * 灵活性高,易于新增处理器
 
 * 缺点
-  * 降低系统性能 ,责任链较长时 ,需要等待较长时间
-  * 不利于调试 ,类似于递归 ,会导致不知道到底是谁处理了请求
+  * 降低系统性能,责任链较长时,需要等待较长时间
+  * 不利于调试,类似于递归,会导致不知道到底是谁处理了请求
 
 
 
@@ -902,7 +907,7 @@ class Boss extends Handler {
 
 ![](image.assets/策略.png)
 
-JDK8中 ,ThreadPoolExecutor的构造方法可以传入RejectedExecutionHandler拒绝策略接口
+JDK8中,ThreadPoolExecutor的构造方法可以传入RejectedExecutionHandler拒绝策略接口
 
 拒绝策略是当有界队列满了时，拒绝添加到线程池
 
@@ -919,7 +924,7 @@ public ThreadPoolExecutor(int corePoolSize,
 
 
 
-每个拒绝策略接口的实现类都封装了拒绝的算法 ,在构造方法中传入策略 ,从而使得线程池具有对应的算法
+每个拒绝策略接口的实现类都封装了拒绝的算法,在构造方法中传入策略,从而使得线程池具有对应的算法
 
 ```java
 public static class AbortPolicy implements RejectedExecutionHandler {
@@ -941,7 +946,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
   * 状态模式关注多种状态的改变
 
 * 不同
-  * 2者都封装了执行的函数在环境类中 ,由环境类决定执行哪个函数
+  * 2者都封装了执行的函数在环境类中,由环境类决定执行哪个函数
 
 
 
@@ -983,7 +988,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 ## 依赖倒转DIP	
 
-**依赖于抽象 ,而不是具体实现 ,针对接口编程 ,不根据实现编程**
+**依赖于抽象,而不是具体实现,针对接口编程,不根据实现编程**
 
 面向接口编程。（声明方法的参数类型、方法的返回类型、变量的引用类型时，尽可能使用抽象类型而不用具体类型，因为抽象类型可以被它的任何一个子类型所替代）
 
@@ -995,7 +1000,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 接口要小而专，绝不能大而全。（臃肿的接口是对接口的污染，既然接口表示能力，那么一个接口只应该描述一种能力，接口也应该是高度内聚的。例如，琴棋书画就应该分别设计为四个接口，而不应设计成一个接口中的四个方法，因为如果设计成一个接口中的四个方法，那么这个接口很难用，毕竟琴棋书画四样都精通的人还是少数，而如果设计成四个接口，会几项就实现几个接口，这样的话每个接口被复用的可能性是很高的。
 
-## 合成聚合复用CARP	尽量使用组合 ,而不是继承
+## 合成聚合复用CARP	尽量使用组合,而不是继承
 
 每次继承都会先构造父类,每次释放都会从子类开始向上释放,这样会浪费很多资源,能用组合就不用继承
 
@@ -1070,7 +1075,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
   * 包图
   * 组合结构图   2.0新增
   * 构件图
-  * **部署图**     软硬件之间映射 ,代码在实施中的物理节点分布
+  * **部署图**     软硬件之间映射,代码在实施中的物理节点分布
   * 制品图
 
 * 行为图
@@ -1090,7 +1095,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 ![image-20200828171527248](image.assets/image-20200828171527248.png)
 
 * 依赖    事物变化影响另一事物    如类A的方法中仅仅使用了类B的对象
-* 泛化    特殊/一般关系    **a可以完成b同样的任务 ,并能补充额外的角色功能**
+* 泛化    特殊/一般关系    **a可以完成b同样的任务,并能补充额外的角色功能**
 * 关联    
 * 聚合    
 * **组合    相同生命周期**
@@ -1116,19 +1121,19 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 
-* include	两个用例中提取出的公共行为 ,是包含关系
+* include	两个用例中提取出的公共行为,是包含关系
 
-* extend	执行用例时根据情况有不同的分支 ,可以将这个用例分为一个基本用例+若干个拓展用例 ,在需要时转向拓展用例 ,**执行完再返回**之前的用例
+* extend	执行用例时根据情况有不同的分支,可以将这个用例分为一个基本用例+若干个拓展用例,在需要时转向拓展用例,**执行完再返回**之前的用例
 
-* 泛化		多个用例共同拥有类似的结构和行为 ,将共性抽象为父用例 ,其他用例作为泛化的子用例
+* 泛化		多个用例共同拥有类似的结构和行为,将共性抽象为父用例,其他用例作为泛化的子用例
 
 
 
 ![](image.assets/image-20200906225846809.png)
 
-学习课程和课程测试之前 ,都需要先检查权限 ,这是包含
+学习课程和课程测试之前,都需要先检查权限,这是包含
 
-在课程测试中途可以选择充入学习币 ,这是拓展
+在课程测试中途可以选择充入学习币,这是拓展
 
 课程注册可以电话注册也可以网上注册,这是泛化
 
@@ -1180,7 +1185,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 
-与活动图类似 ,重点反映状态的转化		箭头上的注释也倾向于状态
+与活动图类似,重点反映状态的转化		箭头上的注释也倾向于状态
 
 
 
@@ -1188,9 +1193,9 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 ## 通信图
 
-与顺序图一样 ,是交互图
+与顺序图一样,是交互图
 
-顺序图强调时序 ,通信图强调**对象之间的组织结构**
+顺序图强调时序,通信图强调**对象之间的组织结构**
 
 
 
@@ -1200,7 +1205,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 ## 构件图
 
-描述一个封装的类和它的接口 ,端口 ,以及由内嵌的构建和连接件构成的内部结构
+描述一个封装的类和它的接口,端口,以及由内嵌的构建和连接件构成的内部结构
 
 
 
@@ -1278,15 +1283,22 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 
-面向对象分析没有考虑到系统测试问题
+==面向对象分析没有考虑到系统测试问题==
 
- 高层模块不应该依赖于底层模块。传统的结构化设计中，髙层模块需要调用或使用底层模块，导致高层模块必须依赖于底层模块，但借助面向对象中的抽象类、接口等一系列机制，可以使得高层模块仅仅和接口耦合，而和实际的底层模块没有直接关联。
+* 高层模块不应该依赖于底层模块。
+* 传统的结构化设计中，髙层模块需要调用或使用底层模块，导致高层模块必须依赖于底层模块，但借助面向对象中的抽象类、接口等一系列机制，可以使得高层模块仅仅和接口耦合，而和实际的底层模块没有直接关联。
 
  
 
-include定义了用例之间的包含关系，用于一个用例包含另一个用例的行为的建模
+* include	包含
 
-extend:	转向执行另一个用例，执行完后返回之前的用例
+  * 一个用例包含另一个用例的行为
+
+  * 被包含用例必须被执行
+
+* extend	继承
+  * 转向执行另一个用例，执行完后返回之前的用例
+  * 子用例的执行是可选项
 
  
 
@@ -1296,15 +1308,7 @@ extend:	转向执行另一个用例，执行完后返回之前的用例
 
 
 
-
-
-
-
-
-
 # 内聚与耦合
-
-
 
 * 内聚
 
