--- a/算法+数据结构.md
+++ b/算法+数据结构.md
@@ -210,7 +210,9 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
-堆就是用数组实现的二叉树，根据**堆属性**来排序，堆属性决定了树中节点的位置。
+用**数组**实现的**完全二叉树**，根据**堆属性**来排序
+
+只有最后一层的结点可以不满,且左满右不满
 
 堆分为两种：最大堆和最小堆，两者的差别在于节点的排序方式。
 
