--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -146,7 +146,27 @@ ConcretePrototype具体原型类,实现具体的克隆方法
 
 在线程a进行分配内存地址时,线程b开始进行singleton==null,**此时singleton已经有内存地址**了,不为null,直接被return
 
-![image-20200817085632182](image.assets/image-20200817085632182.png)
+```java
+public class LazySingleton {
+
+    private volatile static LazySingleton lazySingleton = null;
+
+    private LazySingleton() {
+    }
+
+    /**
+     * 懒汉在自己被调用时才会实例化
+     */
+    public static LazySingleton getInstance() {
+        if (lazySingleton == null) {
+            synchronized (LazySingleton.class) {
+                if (lazySingleton == null) {
+                    lazySingleton = new LazySingleton();
+                }
+            }
+        }
+        return lazySingleton; }}
+```
 
 
 
