--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -603,6 +603,98 @@ class RealSubjectProxy implements Subject {
 
 将==请求封装为对象==，从而可用不同的请求对客户进行参数化,将==请求排队或记录请求日志==,支持**可撤销**的操作.使**发出请求的责任和执行请求的责任分离**
 
+==调用者调用命令对象,命令对象执行命令==
+
+
+
+```
+public class CommandPattern {
+    public static void main(String[] args) {
+        SaveButton saveButton = new SaveButton();
+        Textbox textbox = new Textbox();
+
+        //将页面对象与命令绑定,命令的构造方法中传入了页面元素textbox
+        saveButton.bindCommand(new PrintCommand(textbox));
+
+        textbox.setContext("aa");
+        //页面对象调用命令对象      命令对象调用业务逻辑,处理页面元素
+        saveButton.doPrint();
+
+        textbox.setContext("bb");
+        saveButton.doPrint();
+    }
+}
+
+/**
+ * UI层,保存按钮
+ */
+class SaveButton {
+    private Command command;
+
+    /**
+     *  传入命令对象,完成按钮与命令的绑定,实现了UI和逻辑的分离
+     */
+    public void bindCommand(Command command) {
+        this.command = command;
+    }
+
+    public void doPrint() {
+        if (null != command) {
+            command.execute();
+        }
+    }
+}
+
+/**
+ * UI层,按钮点击后显示的文本
+ */
+class Textbox {
+    private String context;
+
+    public String getContext() {
+        return context;
+    }
+
+    public void setContext(String context) {
+        this.context = context;
+    }
+}
+
+
+/**
+ * 逻辑层  打印服务
+ */
+class PrintService {
+    public void print(String text) {
+        System.out.print(text);
+    }
+}
+
+/**
+ * 命令接口
+ */
+interface Command {
+    void execute();
+}
+
+/**
+ * 具体命令
+ */
+class PrintCommand implements Command {
+
+    private final PrintService printService = new PrintService();
+    private Textbox textbox;
+
+    public PrintCommand(Textbox textbox) {
+        this.textbox = textbox;  }
+
+    @Override
+    public void execute() {
+        printService.print(textbox.getContext());    }}
+```
+
+
+
 
 
 
@@ -621,13 +713,19 @@ class RealSubjectProxy implements Subject {
 
 在不改变集合元素的前提下，为一个集合中的每个元素**提供多种访问方式**，从而在不改变个元素的类的前提下作用于这些元素的新操作
 
-
+![](image.assets/迭代器.png)
 
 
 
 ## 备忘录	Memento
 
-在不破坏封装性的前提下，获取并保存一个对象的内部状态，以便以后恢复它
+不破坏封装性的前提下，获取并保存一个对象的内部状态，以便以后恢复它
+
+备忘录类作为被备份类的私有内部类存在,二者内部属性一致,被备份类为private
+
+备忘录类只能被备份类访问/修改,外部类只能访问到快照名称,时间等非关键信息
+
+![](image.assets/image-20201116093808284.png)
 
 
 
@@ -815,13 +913,31 @@ class B {
 
 ## 状态	State
 
-枚举所有状态,将对象的转换规则以及执行的行为进行封装,允许一个对象在其**内部状态改变时改变其行为**
+枚举所有状态,将对象的转换规则和业务进行封装,允许一个对象在其**内部状态改变时改变其行为**
 
 ==状态对象被多个环境对象共享==
 
-
+* 优点	消除了if,switch等冗余语句，代码有层次性
 
 * 缺点	会增加系统中类的个数 (状态类)
+
+适用场景 ：
+
+1、 行为随状态改变而改变的场景；
+
+2、 业务含有庞大的分支结构，并且这些分支取决于对象的状态
+
+
+
+### 状态VS责任链
+
+都能消除if分支过多的问题,当状态=责任时，两种模式可以互相转化
+
+从定义来看，**状态模式强调对象内在状态的改变**，而**责任链模式强调外部对象间的改变**
+
+从代码来看，状态模式需要知道下一个要转化的状态对象；而责任链模式并不清楚其下一个节点处理对象，因为链式组装由客户端负责。
+
+
 
 
 
