--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -1088,11 +1088,15 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 
+# 其他
 
 
 
+## 生产/消费模式
 
+![img](image.assets/20161101155643986)
 
+某个模块负责产生数据，这些数据由另一个模块来负责处理（此处的模块是广义的，可以是类、函数、线程、进程等）。产生数据的模块，就形象地称为生产者；而处理数据的模块，就称为消费者
 
 
 
