--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -1096,7 +1096,45 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 ![img](image.assets/20161101155643986)
 
-某个模块负责产生数据，这些数据由另一个模块来负责处理（此处的模块是广义的，可以是类、函数、线程、进程等）。产生数据的模块，就形象地称为生产者；而处理数据的模块，就称为消费者
+
+
+缓冲区的作用
+
+* 解耦
+  * 让生产者直接调用消费者，将来消费者代码发生变化，会影响到生产者
+  * 而如果两者都依赖于某个缓冲区，两者之间不直接依赖，耦合也就相应降低了。
+
+* 支持并发
+  * 由于函数调用是同步/阻塞的。万一消费者处理数据慢，会造成等待
+
+* 支持忙闲不均
+  * 生产快,消费慢时，未处理的数据暂时存在缓冲区中
+
+
+
+### 数据单元
+
+每次生产者放到缓冲区的，就是一个数据单元。对于前一 个帖子中寄信的例子，我们可以把每一封单独的信件看成是一个数据单元。 不过光这么介绍，太过于简单，无助于大伙儿分析出这玩意儿。所以，后面咱们来看一下数据单元需要具备哪些特性。搞明白这些特性之 后，就容易从复杂的业务逻辑中分析出适合做数据单元的东西了。
+
+
+
+数据单元特性
+
+* 必须关联到某种业务对象
+* 在考虑业务的时候，必须理解当前这个生产者／消费者模式所对应的业务逻辑,如果选错了业务对象，会导致后续程序设计和编码实现的复杂度大为上升，增加了开发和维护成本。
+* 完整性 在传输过程中，要保证该数据单元的完整
+*  独立性 所谓独立性，就是各个数据单元之间没有互相依赖，某个数据单元传输失败不应该影响已经完成传输的单元；也不应该影响尚未传输的单元。
+  * 传输失败是由于生产过快,缓冲区达到上限，数据单元被丢弃
+  * 如果数据单元相互独立，等到生产者的速度降下来之后，后续的数据单元继续处理，不会受到牵连
+  * 如果数据单元耦合，被丢弃的数据单元会影响到后续其它单元的处理，会使程序逻辑复杂
+
+* 颗粒度 数据单元和业务对象不需要一一对应
+
+  
+
+### 队列缓冲区
+
+
 
 
 
