--- a/算法+数据结构.md
+++ b/算法+数据结构.md
@@ -118,7 +118,13 @@ tail ( LS1 ) = (b,c) ,(d,e)
 
 
 
-## 查找二叉树
+## 二叉树
+
+
+
+### 查找二叉树
+
+
 
 插入的关键字大于树根，则插入到右子树上，若小于树根，则插入到左子树上，若为空树，则作为树根结点
 
@@ -132,7 +138,7 @@ tail ( LS1 ) = (b,c) ,(d,e)
 
 
 
-## 哈夫曼树
+### 哈夫曼树
 
 ![image-20200831212542895](image.assets/image-20200831212542895.png)
 
@@ -154,7 +160,7 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
-## 线索二叉树
+### 线索二叉树
 
 ![](image.assets/线索二叉树.png)
 
@@ -162,7 +168,7 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
-## 平衡二叉树
+### 平衡二叉树
 
 
 
@@ -170,7 +176,7 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
-## 反向构造二叉树
+### 反向构造二叉树
 
 必须有中序遍历才能反向构造
 
@@ -184,7 +190,7 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
-## 树转二叉树
+### 树转二叉树
 
 <img src="image.assets/image-20200831210534091.png" alt="image-20200831210534091" style="zoom: 50%;" />
 
@@ -195,6 +201,86 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 上层和下层的连线只保留最左边 ,下层互相连接
 
 最后旋转45度 ,得到答案
+
+
+
+
+
+
+
+
+
+### 红黑树
+
+
+
+
+
+红链接：将两个2-结点连接起来构成一个3-结点
+
+黑链接：则是2-3树中的普通链接。
+
+
+
+* 从链接的角度来看，3个特性
+  * 红链接均为左链接
+  * 没有任何一个结点同时和两条红链接相连
+  * 完美黑色平衡，即任意空链接到根结点的路径上的黑链接数量相同
+
+
+
+* 从结点的角度来看，5个特性
+  * 根/叶子节点黑
+  * 每个红色节点的两个子节点都是黑（不能有两个连续红）
+  * 从任一节点到其每个叶子的所有路径都包含相同数目的黑色节点
+
+
+
+
+
+
+
+
+
+## B树
+
+
+
+
+
+
+
+### B-树
+
+
+
+
+
+
+
+
+
+### B+树
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -512,6 +598,8 @@ D.关键路径是AOE网中源点至汇点的最短路径
 
 # 算法思想
 
+
+
 ## 分治法
 
 子问题相互独立且形式相同 ,可以通过递归解决
@@ -546,9 +634,9 @@ N皇后 ,迷宫 ,背包
 
 ## 动态规划
 
+
+
 全局最优
-
-
 
 斐波那契 ,矩阵乘法 ,背包 ,LCS最长公共子序列
 
