--- a/算法+数据结构.md
+++ b/算法+数据结构.md
@@ -172,6 +172,19 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
+基于二分策略提高数据的查找速度	
+
+
+
+- 每一个非叶子节点,左小，右大
+
+* 保证数据的左右两边的节点层级相差不会大于1,**避免树形结构由于删除增加变成线性链表**
+* 没有值相等重复的节点
+
+
+
+
+
 
 
 
@@ -246,15 +259,24 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
+==自平衡多路查找树==（查找路径不只两个）
 
+专门为外部存储器设计的，如磁盘，对于读取和写入大块数据有良好的性能
 
 
 
 ### B-树
 
+![](image.assets/B树.jpg)
 
+* ==允许每个节点有更多子节点==
+* 按关键字递增排列，左小右大,关键字只出现在一个结点中
 
+* 2<=非叶节点的子节点数<=M ，且M>=2，空树除外（M阶代表查找路径，M=2是2叉）
 
+* 关键字数：枝节点的关键字数量>=ceil(m/2)-1个且<=M-1个（ceil()是朝正无穷方向取整的函数 ceil(1.1)=2)
+
+* 所有叶子节点均在同一层、叶子节点除了包含了关键字和关键字记录的指针外,也有指向其子节点的指针只不过其指针地址都为null,对应下图最后一层节点的空格子
 
 
 
@@ -264,21 +286,59 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
+![](image.assets/B+树.png)
+
+
+
+* ==非叶子节点并不存储真正的data==,所有data存储在叶节点,==查询时间复杂度固定log n==
+  * B-树可能保存在根结点,最快O(1)查询速度,而B+树永远log n
+* 为所有叶子结点增加了==链指针==,提高区间访问性,支持范围查询
+  * B-树每个节点key和data在一起，无法范围查询
+
+* 因为非叶子节点不存储data，所以B+树的节点能存储更多指向data的key
 
 
 
 
 
+### B+树与索引
 
 
 
+​	MySQL数据以文件的形式存储到硬盘。而读取数据靠机械臂运动,分为寻道时间、旋转延迟、传输时间三个部分,寻道和旋转花费时间长.
+
+​	计算机操作系统做了一些优化，一次IO会把相邻的数据也都读取到内存缓冲区内，==空间局部性原理==告诉我们，访问一个地址时，其相邻的地址大概率也会被访问到。每一次IO读取的数据我们称之为一页,读取一页的数据，才发生一次IO（包括当前数据+相邻数据）
+
+​	每次查数据时减少磁盘IO次数,**需要稳定的数据结构**
+
+* 红黑树
+  * 高度不可控,**逻辑上很近的节点实际很远**，无法很好的利用磁盘预读（局部性原理）
+  * 通过**旋转**保持平衡，而旋转是对整棵树的操作，若部分加载到内存中则无法完成旋转操作
+
+**所以红黑树不能用于索引**
 
 
 
+* B-树
+  * ==不支持范围搜索==
+  * 非叶子节点也存储数据,导致存储索引的数量变少
+
+**所以B-不能用于索引**
 
 
 
+* B+树
+  * 节点存储着多个id（以磁盘的角度可以看作磁盘块）,多路查找,优于二叉树
+  * 非叶子节点只存储key,一次IO能取出更多索引
+  * 每次将范围分割为多个区间，区间越多，定位数据越快,区间对应存储器上的一页
 
+B树每个节点包含的关键字多，应用到数据库中的时，能够充分利用磁盘的块式存储原理,把节点大小限制在块大小范围；把树的关键字多,**层级比二叉树小**，能够减少查找的次数和复杂度
+
+
+
+==InnoDB最小储存单元为页，16K==
+
+![](image.assets/InnoDB.png)
 
 
 
