--- a/算法+数据结构.md
+++ b/算法+数据结构.md
@@ -30,7 +30,7 @@
 
 * 三角矩阵
 
-![image-20200828165245543](image.assets/image-20200828165245543.png)
+![](image.assets/image-20200828165245543.png)
 
 
 
@@ -227,18 +227,21 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
-
-
 红链接：将两个2-结点连接起来构成一个3-结点
 
-黑链接：则是2-3树中的普通链接。
+黑链接：则是2-3树中的普通链接
+
+
+
+Java中，叶子结点是为null的结点
 
 
 
 * 从链接的角度来看，3个特性
   * 红链接均为左链接
-  * 没有任何一个结点同时和两条红链接相连
-  * 完美黑色平衡，即任意空链接到根结点的路径上的黑链接数量相同
+  * **没有任何一个结点同时和两条红链接相连**
+  * **完美黑色平衡**，即任意空链接到根结点的路径上的黑链接数量相同
+    * **整体并不完美平衡**
 
 
 
@@ -246,6 +249,197 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
   * 根/叶子节点黑
   * 每个红色节点的两个子节点都是黑（不能有两个连续红）
   * 从任一节点到其每个叶子的所有路径都包含相同数目的黑色节点
+
+
+
+
+
+#### 左旋
+
+
+
+![](image.assets/左旋.png)
+
+
+
+以某个结点作为支点，其右变为父，右结点的左变为旋转结点的右，左子树不变
+
+==旋转之后,变色==
+
+
+
+
+**左旋**只影响**旋转结点以下**的结构，把旋转结点的左子树移到根节点,作为根节点右子树
+
+==局部的旋转==,当一边子树的结点少了，那么向另外一边子树“借”一些结点；当一边子树的结点多了，那么向另外一边子树“租”一些结点
+
+
+
+#### 查找
+
+
+
+红黑树总保持黑色完美平衡，所以它的查找最坏时间复杂度为O(2lgN)，也即整颗树刚好红黑相隔的时候
+
+![](image.assets/平衡二叉树查找.png)
+
+
+
+
+
+#### 插入
+
+
+
+
+
+![](image.assets/插入处理.png)
+
+![](image.assets/红黑树插入.png)
+
+==插入时初始红色==
+
+* 空树
+
+  * 直接插入,变黑
+
+* 插入结点的Key已存在
+
+  * 更新值,变为原结点颜色
+
+* 插入的父结点 黑
+
+  * 直接插入    红色插入黑色时，不影响平衡
+
+* 插入的**父结点 红		代表必定还有祖父结点,祖父黑,需要考虑旋转**
+  * 叔叔结点 红![](image.assets/叔叔结点 红.png)
+    * 父/叔变黑,祖父变红 -> **把祖父视为当前插入结点,再次进行插入平衡处理**
+      * 祖父就是根节点的话,祖父变黑,此时红黑结构：黑黑红,**是唯一增加黑色结点层数的插入情景**
+      * 这也说明了**红黑树自底向上生长**，普通的二叉查找树自顶向下生长
+  * 叔叔 黑/不存在,父是祖父的左子结点
+    * 插入结点是其父结点的左子结点![](image.assets/红黑插入父左.png)
+      * 父/插入结点黑,祖父红 -> 右旋   (这里可以让插入节点为红,父/祖父黑,但这将导致自底向上的平衡,不如变黑,最小化地局部平衡)
+    * 插入结点是其父结点的右子结点
+  * 叔叔 黑/不存在,父亲是祖父的右子结点
+    * 插入结点是其父结点的左子结点![](image.assets/红黑插入父右.png)
+      * 父/插入节点黑,祖父红 -> 左旋
+
+
+
+
+
+​													==红黑插入练习==
+
+![](image.assets/红黑插入练习.png)
+
+
+
+![](image.assets/红黑插入练习答案.png)
+
+
+
+
+
+#### 删除
+
+
+
+
+
+
+
+- 删的是叶子，直接删除
+- 被删除结点只有一个子结点，子结点替换删除结点
+- 有两个子结点，用后继结点（==大于删除结点的最小结点==）替换删除结点
+- 删除可以视为替代结点代替被删除结点的位置,==替代结点永远在树末,永远比被删除结点稍大==
+- ==替代结点在删除前，还在原来位置参与平衡==
+
+
+
+可以通过结点在x轴上的映射找到后继节点
+
+![](image.assets/红黑树映射x轴.png)
+
+
+
+在不考虑结点的键值的情况下,删除可以视为是节点之间的替换,基于这个思想，上述3种删除情景可以相互转换并且最终都是删除替代节点
+
+![](image.assets/红黑树删除.png)
+
+
+
+![](image.assets/红黑树删除情景.png)
+
+
+
+![](image.assets/红黑树删除约定.png)
+
+灰色表示可以是红/黑
+
+
+
+**替换结点红**
+
+* 变色为被删除结点,红色减少不影响平衡
+
+**替换结点黑**
+
+* 替换结点是其父的左子结点
+  * 兄弟红->兄弟的父和子必黑![](image.assets/删除情景2.1.1.png)
+    * 父红,兄弟黑 -> 左旋 -> 后续平衡
+  * 兄弟黑
+    * 兄弟右红，左任意      左子树将少一个黑,将父变黑加到左子树,兄弟代替父,兄弟右变黑![](image.assets/删除情景2.1.2.1.png)
+      * 兄变父颜色,父变黑,兄弟右变黑 -> 左旋 -> 进行后续平衡
+      * **左旋后看似不平衡,实际上R要参与替换的,去掉R就平衡了**,并且这里糅合了第一次替换和自底向上处理的情况，如果只考虑第一次替换的情况，根据红黑树性质，SL肯定是红色或为Nil。对于自底向上平衡，只需保证每棵子树都平衡,就能达到最终平衡
+    * 兄弟左红，右黑![](image.assets/删除情景2.1.2.2.png)
+      * 兄弟变红,兄弟左黑 -> 右旋,进行兄弟右红的处理
+    * 兄弟左右黑![](image.assets/删除情景2.1.2.3.png)
+      * 兄弟变红 -> 父视为替换节点,参与自底向上平衡	(右边自减1黑,实现平衡)
+  
+* 替换结点是其父的右子结点
+  * 兄弟红 -> 兄弟的父和子必黑![](image.assets/删除情景2.2.1.png)
+    * 父红,兄弟黑 -> 右旋
+  * 兄弟黑
+    * 兄弟左红，右任意![](image.assets/删除情景2.2.2.1.png)
+      * 兄弟变父颜色,父变黑,兄弟左变黑 -> 右旋
+    * 兄弟左黑，右红![](image.assets/删除情景2.2.2.2.png)
+      * 兄弟变红,兄弟右变黑 -> 左旋 -> 进行兄弟左红的处理
+    * 兄弟左右黑![](image.assets/删除情景2.2.2.3.png)
+      * 兄弟变红 -> 父视为替换节点,参与自底向上平衡
+
+
+
+删除后自平衡的处理可以总结为
+
+1. 自己能搞定的自消化                                   
+2. 自己不能搞定的叫兄弟帮忙   ==对于兄弟的子结点,有红的话红的来帮忙==
+3. 兄弟都帮忙不了的，通过改变兄弟,自底向上平衡
+
+
+
+
+
+![](image.assets/红黑树删除练习.png)
+
+
+
+
+
+
+
+
+
+
+
+#### 黑结点可以同时包含一个红子结点和一个黑子结点吗
+
+
+
+
+
+
+
+
 
 
 
@@ -728,31 +922,32 @@ N皇后 ,迷宫 ,背包
 
 
 
+|          | 时间  |          |          | 空间  |
+| -------- | ----- | -------- | -------- | ----- |
+|          | Best  | Avg      | Worst    | Worst |
+| 快速     | nlogn | nlogn    | n^2^     | nlogn |
+| 归并     | nlogn | nlogn    | nlogn    | n     |
+| TimSort  | n     | nlogn    | nlogn    | n     |
+| 堆       | nlogn | nlogn    | nlogn    | 1     |
+| 冒泡     | n     | n^2^     | n^2^     | 1     |
+| 插入     | n     | n^2^     | n^2^     | 1     |
+| 选择     | n^2^  | n^2^     | n^2^     | 1     |
+| 树形选择 | nlogn | nlogn    | n^2^     | n     |
+| 希尔     | nlogn | nlogn^2^ | nlogn^2^ | 1     |
+| 桶       | n+k   | n+k      | n^2^     | n     |
+| 基数     | nk    | nk       | nk       | n+k   |
+| 计数     | n+k   | n+k      | n+k      | k     |
+|          |       |          |          |       |
 
 
 
+基本有序时的排序
 
+* 插入  时间复杂度nk,k为需要插入的元素
+* 增强型冒泡,无需频繁交换元素
+* 最小堆+插入,每次［i，i+k］区间的数进行排序,i为上次操作的下标,［i，i+k］区间内有序,用二分寻找下标
 
-
-现需要对一个基本有序的数组进行排序。此时最适宜采用的算法为（A），时间复杂度为（A）。
-
-(64)A.插入       B.快速       C.归并       D.堆
-
-(65)A.O(n)       B.O(nlgn)      C.O(n²)       D.O(n²lgn)
-
-==插入排序对基本有序的数组排序速度快==；
-
-**插入排序的时间复杂度都是O(n)**
-
-
-
-
-
-
-
-
-
-
+快速不适合基本有序的排序,因为它的原理是选定一个值，然后使得他的左边的数都比他小，右边的数都比他大
 
 
 
