--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -11,7 +11,13 @@
 
 ## 简单工厂/静态工厂
 
+
+
 根据传入的参数，动态决定应该创建哪个产品子类的实例，**以父类形式返回**
+
+可以根据条件生成不同的子类实例，这些子类有一个公共的抽象父类并且实现了相同的方法，但是这些方法针对不同的数据进行了不同的操作（多态）。 当得到子类的实例后，开发人员可以调用基类中的方法而不必考虑到底返回的是哪一个 子类的实例
+
+
 
 ![](image.assets/image-20200817095352502.png)
 
@@ -381,6 +387,14 @@ BufferedInputStream就是一个装饰器，==为InputStream加上缓冲功能==,
 ```
 new BufferedInputStream(new FileInputStream(new File("")));
 ```
+
+
+
+
+
+java IO 中需要完成对不同输入输出源的操作，如果单纯的使用继承这一方式，无疑需要很多的类。比如说，我们操作文件需要一个类，实现文件的字节读取需要一个类，实现文件的字符读取又需要一个类....一次类推每个特定的操作都需要一个特定的类。这无疑 会导致大量的 IO 继承类的出现。显然对于编程是很不利的。而装饰模式可以很好地解决这一问题，在装饰模式中：节点流（如 FileInputStream）直接与输入源交互， 之后通过过滤流（FilterInputStream）进行装饰，这样获得的 io 对象便具有某几个的功能，拓展了 IO 的功能。
+
+
 
 
 
@@ -996,7 +1010,7 @@ class Context {
 
 
 
-```
+```java
 public class ChainRespPattern {
     public static void main(String[] args) {
         Handler leaderA = new Leader();
@@ -1114,7 +1128,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 ### 数据单元
 
-每次生产者放到缓冲区的，就是一个数据单元。对于前一 个帖子中寄信的例子，我们可以把每一封单独的信件看成是一个数据单元。 不过光这么介绍，太过于简单，无助于大伙儿分析出这玩意儿。所以，后面咱们来看一下数据单元需要具备哪些特性。搞明白这些特性之 后，就容易从复杂的业务逻辑中分析出适合做数据单元的东西了。
+每次生产者放到缓冲区的，就是一个数据单元。对于前一个帖子中寄信的例子，我们可以把每一封单独的信件看成是一个数据单元。 不过光这么介绍，太过于简单，无助于大伙儿分析出这玩意儿。所以，后面咱们来看一下数据单元需要具备哪些特性。搞明白这些特性之 后，就容易从复杂的业务逻辑中分析出适合做数据单元的东西了。
 
 
 
@@ -1144,7 +1158,31 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 
+## 装潢模式
+
+
+
+
+
+
+
+## 门面模式
+
+
+
+去一家公司谈业务，不需要了解这个公司内部是如何运作的，你甚至可以对这个公司一无所知，去的时候只需要找到前台，告诉她们你要做什么，她们会找到合适的人跟你接洽，前台的美女就是公司这个系统的门面。
+
+再复杂的系统都可以为用户提供一个简单的门面，Java Web 开发中作为前端控制器的 Servlet 或 Filter 不就是一个门面吗，浏览器对服务器的运作方式一无所知，但是通过前端控制器就能够根据你的请求得到相应的服务。调停者模式也可以举一个简单的例子来说明，例如一台计算机，CPU、内存、硬盘、显卡、声卡各种设备需要相互配合才能很好的工作，但是如果这些东西都直接连接到一起，计算机的布线将异常复杂，在这种情况下，主板作为一个调停者的身份出现，它将各个设备连接在一起而不需要每个设备之间直接交换数据，这样就减小了系统的耦合度和复杂度
+
+
+
+
+
+
+
 # 编程原则
+
+
 
 面向对象设计原则是面向对象设计的基石，面向对象设计质量的依据和保障
 
@@ -1154,39 +1192,81 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 
-## 单一职责SRP	设计目的单一的类
+## 单一职责SRP
 
-高内聚:一个类只做它该做的事情。一个代码模块只完成一项功能，而不涉及与它无关的领域
-模块化，每个功能模块是可以轻易的拿到其他系统中使用的，这样才能实现软件复用
 
-## 开闭OCP	对扩展开放，对修改关闭
 
-①抽象是关键，没有抽象类或接口就没有扩展点；
-②封装可变性，将系统中的各种可变因素封装到一个继承结构中
+设计目的单一的类
 
-## 依赖倒转DIP	
+高内聚	一个代码只完成一项功能
+模块化	模块可以轻易的拿到其他系统中使用
 
-**依赖于抽象,而不是具体实现,针对接口编程,不根据实现编程**
 
-面向接口编程。（声明方法的参数类型、方法的返回类型、变量的引用类型时，尽可能使用抽象类型而不用具体类型，因为抽象类型可以被它的任何一个子类型所替代）
 
-## 里氏替换LSP	子类可以代替父类
+## 开闭OCP
+
+
+
+* 抽象是关键，没有抽象类或接口就没有扩展点
+* 封装可变性，将系统中的各种可变因素封装到继承结构
+
+
+
+## 依赖倒转DIP
+
+
+
+**依赖抽象,而不是具体实现,面向接口编程,不根据实现编程**
+
+声明方法的参数类型、方法的返回类型、变量的引用类型时，尽可能使用抽象类型而不用具体类型，因为抽象类型可以被它的任何一个子类型所替代
+
+
+
+## 里氏替换LSP
+
+
 
 任何时候都可以用子类型替换掉父类型。子类一定是增加父类的能力而不是减少父类的能力
 
-## 接口隔离ISP	使用多个专门的接口比使用单一的总接口
 
-接口要小而专，绝不能大而全。（臃肿的接口是对接口的污染，既然接口表示能力，那么一个接口只应该描述一种能力，接口也应该是高度内聚的。例如，琴棋书画就应该分别设计为四个接口，而不应设计成一个接口中的四个方法，因为如果设计成一个接口中的四个方法，那么这个接口很难用，毕竟琴棋书画四样都精通的人还是少数，而如果设计成四个接口，会几项就实现几个接口，这样的话每个接口被复用的可能性是很高的。
 
-## 合成聚合复用CARP	尽量使用组合,而不是继承
+## 接口隔离ISP	
+
+
+
+多个专门的接口比使用单一的总接口更好
+
+接口小而专,接口也要高度内聚的
+
+琴棋书画就应该分别设计为四个接口，而不应设计成一个接口中的四个方法，因为如果设计成一个接口中的四个方法，那么这个接口很难用，毕竟琴棋书画四样都精通的人还是少数，而如果设计成四个接口，会几项就实现几个接口，这样的话每个接口被复用的可能性是很高的
+
+
+
+## 合成聚合复用CARP	
+
+
+
+尽量使用组合,而不是继承
 
 每次继承都会先构造父类,每次释放都会从子类开始向上释放,这样会浪费很多资源,能用组合就不用继承
 
-（类与类之间简单的说有三种关系，IS-A、HAS-A、USE-A，分别代表继承、关联和依赖。其中，关联关系根据其关联的强度又可以进一步划分为关联、聚合和合成，但说白了都是 HAS-A 关系
+* 类与类之间三种关系
+  * IS-A	继承
+  * HAS-A	关联
+    * 根据其关联的强度又可以进一步划分为关联、聚合和合成
+  * USE-A	依赖
 
-## 迪米特/最少知识LOD	一个对象应对其他对象尽可能更少的了解
 
-一个对象应当对其他对象有尽可能少的了解。（“低耦合”，门面模式和调停者模式就是对迪米特法则的践行。对于门面模式可以举一个简单的例子，你去一家公司洽谈业务，你不需要了解这个公司内部是如何运作的，你甚至可以对这个公司一无所知，去的时候只需要找到公司入口处的前台美女，告诉她们你要做什么，她们会找到合适的人跟你接洽，前台的美女就是公司这个系统的门面。再复杂的系统都可以为用户提供一个简单的门面，Java Web 开发中作为前端控制器的 Servlet 或 Filter 不就是一个门面吗，浏览器对服务器的运作方式一无所知，但是通过前端控制器就能够根据你的请求得到相应的服务。调停者模式也可以举一个简单的例子来说明，例如一台计算机，CPU、内存、硬盘、显卡、声卡各种设备需要相互配合才能很好的工作，但是如果这些东西都直接连接到一起，计算机的布线将异常复杂，在这种情况下，主板作为一个调停者的身份出现，它将各个设备连接在一起而不需要每个设备之间直接交换数据，这样就减小了系统的耦合度和复杂度。迪米特法则用通俗的话来将就是不要和陌生人打交道，如果真的需要，找一个自己的朋友，让他替你和陌生人打交道。）
+
+## 迪米特/最少知识LOD	
+
+
+
+一个对象对其他对象尽可能更少的了解,不要和陌生人打交道，如果真的需要，找一个自己的朋友，让他替你和陌生人打交道
+
+“低耦合”，门面模式和调停者模式就是对迪米特法则的践行
+
+
 
 
 
@@ -1196,19 +1276,15 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 * 面向对象分析
 
-抽取和整理用户需求并建立问题域精确模型
-
-**认定对象、组织对象、描述对象间的相互作用、定义对象的操作、定义对象的内部信息**
-
-认定对象是指：在应用领域中，按自然存在的实体确立对象
-
-组织对象含义是：分析对象间的关系，将相关对象抽象成类
-
-描述对象间的相互作用是：描述出各对象在应用系统中的关系
+  * 抽取和整理用户需求并建立问题模型
+  * **认定对象、组织对象、描述对象间的相互作用、定义对象的操作、定义对象的内部信息**
+    * 认定对象：在应用领域中，按自然存在的实体确立对象
+    * 组织对象：分析对象间的关系，将相关对象抽象成类
+    * 描述对象间的相互作用：描述出各对象在应用系统中的关系
 
 * 面向对象设计
 
-采用协作的对象、对象的属性和方法说明软件解决方案的一种方式，强调定义软件对象和这些软件对象如何协作来满足需求，延续了面向对象分析。
+采用协作的对象、对象的属性和方法说明软件解决方案的一种方式，强调定义软件对象和这些软件对象如何协作来满足需求，延续了面向对象分析
 
 * 面向对象实现
 
@@ -1216,11 +1292,9 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 * 面向对象测试
 
-根据规范说明来验证系统设计的正确性。
+根据规范说明来验证系统设计的正确性
 
 
-
-==面向对象允许多继承==
 
 
 
@@ -1339,12 +1413,6 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 
-
-
-
-
-
-
 ## 状态图
 
 * 用于描述一个对象在多个用例中的行为
@@ -1413,37 +1481,29 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 
-消息的同步异步:
+## 面向对象的多态
 
-同步	对方在线了我才能给他发消息
 
-异步	不在线依然发
-
- 
-
-多态分两种:通用的多态和特定的多态,前者对类型不加限制,允许对不同类型的值执行相同的方法.后者只对指定的类型有效,并且对不同的类型执行不同代码
-
-通用的多态又分为	参数/包含多态	
-
-特定的多态			过载/强制多态
-
-参数多态:采用参数化模板,通过给出不同的参数,使得一个结构有多种类型
-
-包含多台:同样的操作可用于一个类型及其子类型(不是子类)包含多台一般需要运行时的类型检查
-
- 
 
 面向对象允许多继承
 
- 
 
-过载多态:同一个操作符/函数名在不同的上下文有不同的类型
 
-强制多态:编译程序通过语义操作,把操作对象的类型强新变化(casting)
+多态分两种:
 
- 
+* 通用多态	对类型不加限制,允许对不同类型的值执行相同的方法
+  * 参数多态	采用参数化模板,通过给出不同的参数,使得一个结构有多种类型
+  * 包含多态	同样的操作可用于一个类型及其子类型,一般需要运行时的类型检查
 
-**面向对象分析包含5个活动：认定对象、组织对象、描述对象间的相互作用、定义对象的操作、定义对象的内部信息。**
+* 特定多态	只对指定的类型有效,并且对不同的类型执行不同代码
+  * 过载多态	同一个操作符/函数名在不同的上下文有不同的类型
+  * 强制多态	编译程序通过语义操作,把操作对象的类型强新变化(casting)
+
+
+
+​		
+
+
 
 
 
@@ -1511,4 +1571,11 @@ public static class AbortPolicy implements RejectedExecutionHandler {
   * 控制耦合:两个模块彼此间传递的信息中有控制信息
   * 内容耦合:一个模块需要设计到另一个模块的内部信息
 
-<img src="image.assets/image-20200828094923940.png" alt="image-20200828094923940" style="zoom:150%;" />
+
+
+
+
+
+
+
+
