--- a/软件设计师/计算机网络.md
+++ b/软件设计师/计算机网络.md
@@ -104,10 +104,7 @@ PPTP ,L2TP ,IP ,ICMP ,IGMP
 
 
 * 长连接
-  * c与se建立连接后不断开，减少重复握手损耗。常用于点对点P2P通信
-* 
-* 
-* 
+  * c与s建立连接后不断开，减少重复握手损耗。常用于点对点P2P通信
 * 短连接
   * C与s每进行报文传输时才连接。**常用于一点对多点通讯**
 
@@ -116,17 +113,19 @@ PPTP ,L2TP ,IP ,ICMP ,IGMP
 
 
 * 发送接收方式
-  * 异步：报文发送和接收是分开的，相互独立，互不影响的。这种方式又分两种情况：异步双工：接收和发送在同一个程序中，有两个不同的子进程分别负责发送和接送。异步单工：接送和发送使用两个不同的程序来完成。
-  * 同步：报文发送和接收是同步进行，即报文发送后等待接送返回报文。同步方式一般需要考虑超时问题，试想我们发送报文以后也不能无限等待啊，所以我们要设定一个等待时候。超过等待时间发送方不再等待读返回报文。直接通知超时返回。
+  * 异步：报文发送和接收相互独立
+    * 异步双工：接收和发送在同一个程序中，有两个不同的子进程分别负责发送和接送
+    * 异步单工：接送和发送使用两个不同的程序来完成
+  * 同步：报文发送和接收同步进行，需要考虑超时问题
 
 
 
 * 报文格式
-  * 非阻塞方式：读函数不停的进行读动作，如果没有报文接收到，等待一段时间后超时返回，**一般需要指定超时时间****
+  * 非阻塞方式：读函数不停的进行读动作，如果没有报文接收到，等待一段时间后超时返回，**需要指定超时时间**
   * 阻塞方式：如果没有接收到报文，则读函数一直处于等待状态，直到报文到达。
     循环读写方式1、一次直接读写报文：在一次接收或发送报文动作中一次性不加分别地全部读取或全部发送报文字节。
-  * 不指定长度循环读写：这一版发生在短连接进程中，受网络路由等限制，一次较长的报文可能在网络传输过程中被分解成很多个包，一次读取可能不能全部读完一次报文，这就需要循环读取报文，知道读完为止。
-  * 带长度报文头循环读写：这种情况一般在长连接中，由于在长连接中没有条件能够判断循环读写什么时候结束。必须要加长度报文头。
+  * 不指定长度循环读写：一般发生在短连接中，受网络路由等限制，一次较长的报文可能在网络传输过程中被分解成很多个包，一次读取可能不能全部读完一次报文，这就需要循环读取报文，知道读完为止
+  * 带长度报文头循环读写：一般在长连接中，由于在长连接中没有条件能够判断循环读写什么时候结束。必须要加长度报文头。
     
 
 
@@ -139,15 +138,15 @@ PPTP ,L2TP ,IP ,ICMP ,IGMP
 
 
 
-原本为TCP/IP(传输控制协议/网际协议)一个协议,之后又被拆分为单独的两个部分,以便提供广泛支持,以及允许任何主机与链路层协议互操作
+原本为TCP/IP(传输控制/网际协议)协议,之后被拆分为单独的两个部分,以便提供广泛支持,允许任何主机与链路层协议互操作
 
  
 
-* 面向连接	应用程序在向另一个应用程序发送数据之前,**必须先握手**
+* 面向连接	发送数据之前,**先握手**
 
 * 全双工服务	双向传输数据
 
-* 点对点	**单个**发送方与单个接收方之间连接
+* 点对点	**单个**发送/接收方之间连接
 
 * 差错检测
 
@@ -158,10 +157,10 @@ PPTP ,L2TP ,IP ,ICMP ,IGMP
 * 定时器
 
 * 用于序号和确认号的首部字段
-  * 序列号seq：4个字节，标记顺序，第一个字节的编号由本地随机产生；给字节编上序号后，就给每一个报文段指派一个序号
-  * 确认号ack：4个字节，期待收到对方下一个报文段的第一个数据字节的序号
-  * 确认ACK：占1位，**仅当ACK=1时，确认号字段才有效**。ACK=0时，确认号无效
-  * 同步SYN：连接建立时用于同步序号。SYN=1，ACK=0表示：这是一个连接请求报文段。若同意连接，则在响应报文段中使得SYN=1，ACK=1。因此，SYN=1表示这是一个连接请求，或连接接受报文。SYN这个标志位**只有在TCP建产连接时才被置1，握手完成后被置0**
+  * 序列号seq：4字节，标记顺序，第一个字节编号由本地随机产生；给字节编上序号后，就给每个报文段指派一个序号
+  * 确认号ack：4字节，期待收到对方下一个报文段的第一个数据字节的序号
+  * 确认ACK：占1位，**仅当ACK=1时，确认字段才有效**
+  * 同步SYN：连接建立时用于同步序号。SYN=1，ACK=0：连接请求报文段。若同意连接，则在响应报文段中使得SYN=1，ACK=1。==SYN=1表示连接请求/接受==。**SYN只有在握手才置1，握手完成置0**
   * 终止FIN：FIN=1表示发送方的数据发送完毕，要求释放连接
   * ==大写表示标志位, 其值为1/0	ack、seq小写的单词表示序号==
 
@@ -171,15 +170,15 @@ PPTP ,L2TP ,IP ,ICMP ,IGMP
 
  ![](image.assets\三次握手.png)
 
-* 第一次握手：建立连接
-  * 客户端发送（syn=x）syn包到服务器，
+* 第1次握手：建立连接
+  * 客户端发送（syn=x）
   * 进入"同步已发送"SYN_SENT状态，等待服务器确认
 
-* 第二次握手：服务器收到syn包
-  * 确认客户的syn，返回（ack=x+1,syn=y）SYN+ACK包
+* 第2次握手：服务器收到syn包
+  * 确认客户的syn连接请求，返回（ack=x+1,syn=y）
   * 服务器进入"同步收到"SYN_RECV状态
 
-* 第三次握手：客户端收到服务器的SYN+ACK包
+* 第3次握手：客户端收到服务器的SYN+ACK包
   * 向服务器发送(ack=y+1）确认包ACK
   * 客户端和服务器都进入"已建立连接"ESTABLISHED"状态
   * 完成三次握手
@@ -192,19 +191,31 @@ PPTP ,L2TP ,IP ,ICMP ,IGMP
 
 ## 四次挥手
 
-![](image.assets\四次挥手.png) 
+![](image.assets\四次挥手.png)
 
-1）客户端进程发出连接释放报文，并且停止发送数据。释放数据报文首部，FIN=1，其序列号为seq=u（等于前面已经传送过来的数据的最后一个字节的序号加1），此时，客户端进入FIN-WAIT-1（终止等待1）状态。 TCP规定，FIN报文段即使不携带数据，也要消耗一个序号。
+ 
 
-2）服务器收到连接释放报文，发出确认报文，ACK=1，ack=u+1，并且带上自己的序列号seq=v，此时，服务端就进入了CLOSE-WAIT（关闭等待）状态。TCP服务器通知高层的应用进程，客户端向服务器的方向就释放了，这时候处于半关闭状态，即客户端已经没有数据要发送了，但是服务器若发送数据，客户端依然要接受。这个状态还要持续一段时间，也就是整个CLOSE-WAIT状态持续的时间。
+* 第1次挥手
+  * 客户端发出连接释放报文，并且停止发送数据。释放数据报文首部，FIN=1，其序列号为seq=u（等于前面已经传送过来的数据的最后一个字节的序号加1）
+  * 客户端进入FIN-WAIT-1（终止等待1）状态
+  * FIN报文段即使不携带数据，也要消耗一个序号
 
-3）客户端收到服务器的确认请求后，此时，客户端就进入FIN-WAIT-2（终止等待2）状态，等待服务器发送连接释放报文（在这之前还需要接受服务器发送的最后的数据）。
+* 第2次挥手
+  * 服务器收到连接释放报文，发出确认报文，ACK=1，ack=u+1，并带上自己的序列号seq=v
+  * 服务端进入了CLOSE-WAIT（关闭等待）状态
+  * 服务器通知高层的应用进程，释放客户端->服务器的方向的连接，这时处于半关闭状态，即客户端没有数据要发送，但是服务器若发送数据，客户端依然要接受。这个状态还要持续一段时间，也就是整个CLOSE-WAIT状态持续的时间
+  * 客户端收到服务器的确认请求
+  * 客户端就进入FIN-WAIT-2（终止等待2）状态，等待服务器发送连接释放报文
 
-4）服务器将最后的数据发送完毕后，就向客户端发送连接释放报文，FIN=1，ack=u+1，由于在半关闭状态，服务器很可能又发送了一些数据，假定此时的序列号为seq=w，此时，服务器就进入了LAST-ACK（最后确认）状态，等待客户端的确认。
+* 第3次挥手
+  * 服务器将所有数据发送完毕，向客户端发送连接释放报文，FIN=1，ack=u+1，由于在半关闭状态，服务器很可能又发送了一些数据，假定此时的序列号为seq=w
+  * 服务器就进入了LAST-ACK（最后确认）状态，等待客户端的确认
 
-5）客户端收到服务器的连接释放报文后，必须发出确认，ACK=1，ack=w+1，而自己的序列号是seq=u+1，此时，客户端就进入了TIME-WAIT（时间等待）状态。注意此时TCP连接还没有释放，必须经过2MSL（最长报文段寿命）的时间后，才进入CLOSED状态。
-
-6）服务器只要收到了客户端发出的确认，立即进入CLOSED状态。可以看到，服务器结束TCP连接的时间要比客户端早一些。
+* 第4次挥手
+  * 客户端收到服务器的连接释放报文后，必须发出确认，ACK=1，ack=w+1，而自己的序列号是seq=u+1
+  * 此时，客户端就进入了TIME-WAIT（时间等待）状态。==此时TCP连接还没有释放，必须经过2MSL（最长报文段寿命）的时间后，才进入CLOSED状态==
+  * 服务器只要收到了客户端发出的确认，立即进入CLOSED状态
+  * **服务器结束TCP连接的时间比客户端早**
 
 
 
