--- a/软件设计师/计组原+操作系统.md
+++ b/软件设计师/计组原+操作系统.md
@@ -248,40 +248,58 @@ N = 尾数*基数^阶码
 
 
 
+
+
+## 寄存器
+
+
+
+寄存器的功能是存储二进制代码,由具有存储功能的触发器组合构成
+
+一个触发器可以存储1位二进制代码，故存放n位二进制代码的寄存器，需用n个触发器来构成
+
+按照功能的不同，可将寄存器分为基本寄存器和移位寄存器两大类。基本寄存器只能并行送入数据，也只能并行输出。移位寄存器中的数据可以在移位脉冲作用下依次逐位右移或左移，数据既可以并行输入、并行输出，也可以串行输入、串行输出，还可以并行输入、串行输出，或串行输入、并行输出，十分灵活，用途也很广
+
+
+
+
+
+
+
 ## 存储器
 
 
 
 * 按所处的位置可分为内存和外存
-
-* 按构成存储器的材料分为磁存储器、半导体存储器和光存储器。
-
+* 按构成存储器的材料
+  * 磁表面存储器  在金属或塑料基体的表面上涂一层磁性材料作为记录介质
+  * 光盘存储器  应用激光在磁光材料上进行读写的存储器  不易丢失,记录密度高,可互换性强
+  * 半导体存储器  体积小,功耗低,存取时间短
+* 分为磁存储器、半导体存储器和光存储器。
 * 按存储器的工作方式分为读写存储器和只读存储器。
-
 * 按访问方式可分为按地址访问和按内容访问的存储器。
-
-* 按寻址方式可分为随机存储器、顺序存储器和直接存储器。
-
-相联存储器是一种按内容访问的存储器。
-
-
-
-
-
-* DRAM（Dynamic Random Access Memory）
-  * 动态随机存取存储器，如系统内存
-
-* SRAM（Static Random Access Memory）
-  * 静态随机存取存储器。静止存取，不需要刷新电路
-
-* EEPROM (Electrically Erasable Programmable read only memory)
-  * 电可擦可编程只读存储器,掉电后数据不丢失,可以在电脑上或专用设备上擦除已有信息，重新编程。一般用在即插即用。
+* 按寻址方式可分为
+  * 随机存储器RAM  任何一个存储单元都可以随机存取,并且存取时间和存储单元的物理位置无关  **主存的主要存储器**
+    * 静态SRAM  以触发器原理寄存信息,不需要刷新电路
+    * 动态DRAM  以电容充放电原理寄存信息 **系统内存**
+  * 只读存储器ROM  一般只进行读操作,用于保存,与RAM共同作为主存的一部分
+    * 掩膜ROM：不可编程ROM，属于第一代ROM，只能读，不能写。
+    * PROM：可编程ROM,只能写一次
+      * 一个存储单元就是一个二极管和熔断丝，熔断丝导通的时代表1，通过烧录器把熔断丝烧断，电路不导通,实现单次的写入
+    * EPROM：可编程ROM，紫外光可以多次擦除（可以写），速度慢，操作复杂
+    * EEPROM：电可擦可编程只读存储器,**掉电后数据不丢失,一般用在即插即用**。（可以写），比EPROM方便
+    * flash：即“闪存”，可以高速读写。被广泛使用
+  * 直接存储器
+  * 顺序/串行存储器  按物理位置的先后寻找地址(读写时间波动大)
+  * ==部分顺序访问 如磁盘== 先指定磁道(直接),然后再寻址(顺序)
 
 
 
 
 
-# 程序查询方式
+## 程序查询方式
+
+
 
 程序查询方式是通过**CPU执行程序**来查询状态的。 
 
