--- a/算法+数据结构.md
+++ b/算法+数据结构.md
@@ -108,13 +108,10 @@ tail ( LS1 ) = (b,c) ,(d,e)
 
 
 
-## 遍历
-
-  从上到下 ,从左到右
-
-* 前序    12457836
-* 中序    42785136
-* 后序    48752631
+* 遍历
+  * 前序    
+  * 中序    ==必须有中序遍历才能反向构造二叉树==
+  * 后序    
 
 
 
@@ -122,19 +119,18 @@ tail ( LS1 ) = (b,c) ,(d,e)
 
 
 
-### 查找二叉树
+### 查找树
 
 
 
-插入的关键字大于树根，则插入到右子树上，若小于树根，则插入到左子树上，若为空树，则作为树根结点
+最坏情况下树高N,退化为链表
 
-结点已存在则不插入
 
-* 删除结点时
 
-被删除结点只有一个孩子 ,直接替换掉被删除节点的位置
+* 删除
 
-有2个孩子 ,在被删除结点的**左子树中序遍历**找到最大值 ,替换被删除结点
+  * 被删除结点只有一个孩子 ,直接替换掉被删除节点的位置
+  * 有2个孩子 ,在被删除结点的**左子树中序遍历**找到最大值 ,替换被删除结点
 
 
 
@@ -153,10 +149,6 @@ A.a:4,b:2,c:3,d:3,e:2,f:4,g:3      B.a:6,b:2,c:5,d:3,e:1,f:6,g:4
 C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 ![image-20200909081813745](image.assets/image-20200909081813745.png)
-
-
-
-
 
 
 
@@ -185,24 +177,6 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
-
-
-
-
-### 反向构造二叉树
-
-必须有中序遍历才能反向构造
-
-
-
-前序 ABHFDECG	中序HBEDFAGC
-
-![image-20200831194203229](image.assets/image-20200831194203229.png)
-
-![](image.assets/树构造.png)
-
-
-
 ### 树转二叉树
 
 <img src="image.assets/image-20200831210534091.png" alt="image-20200831210534091" style="zoom: 50%;" />
@@ -217,44 +191,146 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
+## 2-3树
+
+
+
+**允许一个结点保存多个键**
+
+* 2-结点	一个键两条链,左小右大
+
+* 3-结点	两个键三条链
+  * 左 小
+  * 中 在两个键区间之内
+  * 右 大
+
+
+
+* 任意空链接到根结点的路径长度相等
+* 4-结点变换为3-结，树高不变，**只有当根结点分解时，树高+1**
+* ==自底向上生长==
+* 实现复杂
+  * 需要处理不同的结点类型
+  * 需要多次比较操作来将结点下移
+  * 需要上移来拆分4-结点； 拆分4-结点的情况有很多种
+
+
+
+**最坏情况下所有结点都是2-,树高lgN**
+
+
+
+
+
+### 查找
+
+
+
+* 和根结点比较
+* 查找相应区间的链接，并在其指向的子树中递归地继续查找
+* 如果是空链接，查找未命中
+
+
+
+### 插入
+
+
+
+* 先查找，将节点挂到未找到的节点上
+  * 找到2-结点，放到2-结点里面使其变成3-结点
+  * 找到3-结点
+    * 插入,使其变成4-结点,触发自平衡
+    * 中间结点上升至父节点
+      * 父结点也变4-的话,继续上升中间结点,向上自平衡
+        * 直到根结点还是4-,分裂根结点
+
+
+
+<img src="image.assets/2-3树插入过程.png" style="zoom: 50%;" />
+
+
+
+#### 单个3-结点/父结点为2的3-结点
+
+
+
+* 暂时使其变成一个4-结点，同时包含四条链接
+
+* 中间元素提升，左边的键作为左子结点，右边的键作为右子结点
+
+* 插入完成，变为平衡2-3 查找树，树的高度从0变为1
+
+
+
+<img src="image.assets/2-3树一个结点插入.png" style="zoom:50%;" /><img src="image.assets/2-3树父节点为2插入.png" style="zoom:50%;" />
+
+#### 父节点为3-结点的3-结点插入新键
+
+
+
+插入的结点是3-结点的时候，我们将该结点拆分，中间元素提升至父结点，但是此时父结点是一 个3-结点， 插入之后，父结点变成了4-结点，然后继续将中间元素提升至其父结点，直至遇到一个父结 点是2-结点，然后将其 变为3-结点，不需要继续进行拆分
+
+
+
+
+
+#### 分解根节点
+
+
+
+当插入结点到根结点的路径上全部是3-结点的时候，最终根结点会变成一个临时的4-结点
+
+需要将根结点拆分为两个2-结点，树高加1
+
+<img src="image.assets/2-3查找树根结点分裂.png" style="zoom:50%;" />
 
 
 
 
 
 
-### 红黑树
+
+## 红黑树
 
 
 
-红链接：将两个2-结点连接起来构成一个3-结点
+借助了2-3树的思想
 
-黑链接：则是2-3树中的普通链接
+将3-结点表示为由一条左斜红链接(两个2-结点其中之一是另一个的左子结点)相连的两个2-结点
 
-
-
-Java中，叶子结点是为null的结点
+优点:无需修改就可以直接使用标准的二叉查找树的get方法
 
 
 
-* 从链接的角度来看，3个特性
-  * 红链接均为左链接
-  * **没有任何一个结点同时和两条红链接相连**
-  * **完美黑色平衡**，即任意空链接到根结点的路径上的黑链接数量相同
-    * **整体并不完美平衡**
+**红链接：将两个2-结点连接,构成3-结点**
+
+黑链接：2-结点
+
+叶子结点	为null的结点
 
 
 
-* 从结点的角度来看，5个特性
-  * 根/叶子节点黑
-  * 每个红色节点的两个子节点都是黑（不能有两个连续红）
-  * 从任一节点到其每个叶子的所有路径都包含相同数目的黑色节点
+<img src="image.assets/2-3树转红黑.png" style="zoom:50%;" /> 变为 <img src="image.assets/红黑.png" style="zoom: 50%;" />
+
+
+
+  
+
+* 红链接均为左链接
+  * **没有结点同时和两条红链接相连**(不存在4-结点)
+* **完美黑色平衡**
+  * 任意空链接到根结点,路径上的黑链接数量相同
+  * 任意结点到叶子结点,路径上的黑结点数量相同
+  * **整体并不完美平衡**
+
+* 根/叶子节点黑
+* 不能有两个连续红
 
 
 
 
 
-#### 左旋
+### 左旋
 
 
 
@@ -275,7 +351,7 @@ Java中，叶子结点是为null的结点
 
 
 
-#### 查找
+### 查找
 
 
 
@@ -287,7 +363,7 @@ Java中，叶子结点是为null的结点
 
 
 
-#### 插入
+### 插入
 
 
 
@@ -340,7 +416,7 @@ Java中，叶子结点是为null的结点
 
 
 
-#### 删除
+### 删除
 
 
 
@@ -425,13 +501,11 @@ Java中，叶子结点是为null的结点
 
 
 
+### 黑结点可以同时包含红黑子结点
 
 
 
 
-
-
-#### 黑结点可以同时包含一个红子结点和一个黑子结点吗
 
 
 
