--- a/算法+数据结构.md
+++ b/算法+数据结构.md
@@ -1025,6 +1025,20 @@ N皇后 ,迷宫 ,背包
 
 
 
+## 深度优先 DFS
+
+
+
+用于遍历或 搜索树/图
+
+
+
+* 回溯强调了回退操作对于搜索的合理性
+
+* 深度优先强调一种遍历的思想
+
+
+
 ## 贪心
 
 **局部最优** ,每一步选择当前的最优解
