--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -1218,7 +1218,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 **依赖抽象,而不是具体实现,面向接口编程,不根据实现编程**
 
-声明方法的参数类型、方法的返回类型、变量的引用类型时，尽可能使用抽象类型而不用具体类型，因为抽象类型可以被它的任何一个子类型所替代
+声明方法的参数类型、方法的返回类型、变量的引用类型时，尽可能使用抽象类型，因为抽象类型可以被它的任何一个子类型所替代
 
 
 
@@ -1236,7 +1236,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 多个专门的接口比使用单一的总接口更好
 
-接口小而专,接口也要高度内聚的
+接口小而专,高度内聚
 
 琴棋书画就应该分别设计为四个接口，而不应设计成一个接口中的四个方法，因为如果设计成一个接口中的四个方法，那么这个接口很难用，毕竟琴棋书画四样都精通的人还是少数，而如果设计成四个接口，会几项就实现几个接口，这样的话每个接口被复用的可能性是很高的
 
@@ -1550,19 +1550,12 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 * 内聚
 
-①偶然内聚	各个处理元素之间没有任何联系。
-
-②逻辑内聚	执行逻辑上相似的功能，**通过参数确定完成哪个功能**
-
-③时间内聚	**同时执行的动作组合在一起**
-
-④通信内聚	所有处理元素在**同一个数据结构**上操作，或者指各处理使用**相同的输入/输出数据**
-
-⑤顺序内聚	各个处理元素必须顺序执行，==前一个功能元素的输出是下一个功能元素的输入==
-
-⑥功能内聚	==最强的内聚==，所有元素**共同完成一个功能，缺一不可**
-
-
+  * 偶然内聚	各个处理元素之间没有任何联系。
+  * 逻辑内聚	执行逻辑上相似的功能，**通过参数确定完成哪个功能**
+  * 时间内聚	**同时执行的动作组合在一起**
+  * 通信内聚	所有处理元素在**同一个数据结构**上操作，或者指各处理使用**相同的输入/输出数据**
+  * 顺序内聚	各个处理元素必须顺序执行，==前一个功能元素的输出是下一个功能元素的输入==
+  * 功能内聚	==最强的内聚==，所有元素**共同完成一个功能，缺一不可**
 
 * 耦合
 
